@@ -1086,9 +1086,10 @@ In that case, the template engine used will be your theme's and the arguments yo
 as well as the global context from your ``conf.py``, are available to the template you
 are creating.
 
-You can use anything defined in your confguration's ``GLOBAL_CONTEXT`` as variables in your
-shortcode template, with a caveat: Because of an unfortunate implementation detail, data is called
-"global_data" when used in a shortcode.
+You can use anything defined in your confguration's ``GLOBAL_CONTEXT`` as
+variables in your shortcode template, with a caveat: Because of an unfortunate
+implementation detail (a name conflict), ``data`` is called ``global_data``
+when used in a shortcode.
 
 The Global Context and Data files
 ---------------------------------
@@ -1119,6 +1120,8 @@ JSON/YAML/TOML files and Nikola generates a large page with data from all data
 files. (This is especially useful with some automatic rebuild feature, like
 those documented in `Deployment`_)
 
+Data files are also available as ``global_data``, to avoid name conflicts in
+shortcodes. (``global_data`` works everywhere.)
 
 Redirections
 ------------
