@@ -4,7 +4,8 @@ New in master
 Bugfixes
 --------
 
-* Make "data" from global context available to templated shortcodes (Issue #2488)
+* Make ``data`` from global context available to templated shortcodes
+  as ``global_data`` (Issue #2488)
 * Don't crash if plugins is a file (Issue #2539)
 
 Features
